--- a/src/App.css
+++ b/src/App.css
@@ -142,14 +142,14 @@ a:hover {
   align-items: center;
   flex-direction: column;
   border-bottom: 1px solid var(--border);
-  padding-top: 20px;
   padding-bottom: 20px;
   gap: 10px;
 }
 
 .coin-heading-container .coin-name {
-  font-weight: 900;
+  font-weight: 700;
   color: var(--pink);
+  margin-bottom: 0px !important;
 }
 
 .coin-heading-container p {
@@ -160,9 +160,9 @@ a:hover {
 
 .stats-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  gap: 40px;
+  gap: 100px;
 }
 
 .stats-container h2 {
@@ -197,6 +197,9 @@ a:hover {
   font-weight: 800;
 }
 
+.coin-value-statistics {
+  width: 30%;
+}
 .coin-value-statistics-heading p {
   font-size: 1rem;
   opacity: 0.9;
@@ -326,6 +329,7 @@ a:hover {
 }
 .chart-title {
   color: #0071bd !important;
+  margin-top: 40px;
 }
 .price-container {
   display: flex !important;
@@ -362,7 +366,7 @@ a:hover {
 .crypto-card {
   min-width: 250px;
 }
-.crypto-card .crypto-image {
+.crypto-image {
   width: 35px;
 }
 .select-timeperiod {
