--- a/src/App.css
+++ b/src/App.css
@@ -171,7 +171,19 @@ a:hover {
   margin-top: 20px;
   color: var(--pink);
 }
+.exchange-name-container {
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
 
+.exchange-name-container .exchange-name {
+  font-weight: 700;
+  color: var(--pink);
+  margin-bottom: 0px !important;
+}
 .coin-details-heading {
   font-weight: 700 !important;
   margin-top: 20px !important;
