--- a/src/App.css
+++ b/src/App.css
@@ -162,7 +162,6 @@ a:hover {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  gap: 100px;
 }
 
 .stats-container h2 {
@@ -171,6 +170,10 @@ a:hover {
   margin-top: 20px;
   color: var(--pink);
 }
+.coin-value-statistics {
+  padding: 0 30px 0 30px;
+}
+
 .exchange-name-container {
   display: flex;
   /* justify-content: center; */
@@ -197,7 +200,6 @@ a:hover {
   font-size: 1rem;
   opacity: 0.9;
   padding: 20px;
-  gap: 20px;
 }
 
 .coin-stats-name {
