--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -27,6 +27,11 @@
   flex: 0.2;
   background-color: rgb(0, 21, 41);
 }
+  padding: 0 0.75rem;
+  background-color: #18354c;
+  display: flex;
+  flex-direction: column !important;
+  flex-shrink: 0;
 
 .nav-container {
   position: fixed;
