--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -13,8 +13,13 @@
   box-sizing: border-box;
 }
 
+.header {
+  display: flex;
+}
+
 .main {
   flex: 0.8;
+  flex-direction: row;
   width: 100%;
 }
 
@@ -24,30 +29,32 @@
 }
 
 .navbar {
-  flex: 0.2;
-  background-color: rgb(0, 21, 41);
-}
   padding: 0 0.75rem;
   background-color: #18354c;
   display: flex;
   flex-direction: column !important;
   flex-shrink: 0;
 
-.nav-container {
   position: fixed;
+  top: 0;
+  right: 0;
   left: 0;
-  margin: 10px;
-  height: 100vh;
-  margin: 0px;
-  background-color: rgb(0, 21, 41);
+  z-index: 999;
+}
+
+.nav-container {
+  display: flex;
+  flex-direction: row;
+  flex-shrink: 0;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.75rem 1rem;
 }
 
 a:hover {
   color: var(--pink) !important;
 }
 
-.routes {
-  padding: 20px;
 .main-container {
   margin: auto;
   padding: 3rem 0;
@@ -55,17 +62,18 @@ a:hover {
 }
 
 .logo {
-  margin: 0 0 0 10px;
+  margin-left: 5px;
+  margin-right: 30px;
+  margin-bottom: 0 !important;
+  vertical-align: middle;
 
   &-container {
-    background-color: #001529;
     display: flex;
-    padding: 15px;
-    width: 100%;
+    align-items: center;
   }
 
   a {
-    color: white;
+    color: white !important;
   }
 }
 
@@ -377,14 +385,6 @@ a:hover {
     margin-top: 90px;
     margin-left: 0px;
     margin-right: 10px;
-  }
-
-  .nav-container {
-    height: 8vh;
-    position: fixed;
-    width: 100%;
-    z-index: 100;
-    background-color: var(--bgSecondary);
   }
 
   .menu-control-container {
